Service Regression/tests/00DM0000001eO1fMAE/objects/SVOC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Source_Account_Web_State__c</fullName>
        <inlineHelpText>if not populated from the lead, enter the state listed on the customer&apos;s website</inlineHelpText>
        <label>Source Account Web State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Account_Web_Street_Address__c</fullName>
        <inlineHelpText>if not populated from the lead, enter the street address that is listed on the customer&apos;s webiste</inlineHelpText>
        <label>Source Account Web Street Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Web_Zip__c</fullName>
        <inlineHelpText>if not populated from the lead, enter the zip code listed on the customer&apos;s website</inlineHelpText>
        <label>Source Account Web Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Website_Address__c</fullName>
        <formula>Source_Account__r.Website</formula>
        <inlineHelpText>formula field that reads the website address from the source account</inlineHelpText>
        <label>Source Account Website Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>this field is populated when a SVOC Request is created from the account.  This field is blank if the request is generated from a link outside the account</inlineHelpText>
        <label>Source Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Source Account)</relationshipLabel>
        <relationshipName>SVOC_Requests_Source_Account_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <formula>TEXT(Source_Account__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the standard sfdc type field from the account</inlineHelpText>
        <label>Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>select the state where the customer is located</inlineHelpText>
        <label>Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <inlineHelpText>enter the street address of the customer&apos;s location</inlineHelpText>
        <label>Address Street Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Request__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>check this box to submit your svoc request</inlineHelpText>
        <label>Submit Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unverified_Prospect_Address__c</fullName>
        <formula>&quot;STREET&quot;&amp;&quot;:&quot;&amp;Source_Account__r.ShippingStreet &amp;&quot;   &quot;&amp; &quot;CITY&quot;&amp;&quot;:&quot;&amp; Source_Account__r.ShippingCity &amp;&quot;   &quot;&amp; &quot;STATE&quot;&amp;&quot;:&quot;&amp; Source_Account__r.ShippingState &amp;&quot;   &quot;&amp; &quot;ZIP&quot;&amp;&quot;:&quot;&amp; Source_Account__r.ShippingPostalCode</formula>
        <inlineHelpText>formula field that concatenates the address info under Shipping Address from the source account</inlineHelpText>
        <label>Source Account Address Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unverified_Prospect_Billing_Address__c</fullName>
        <formula>&quot;STREET&quot;&amp;&quot;:&quot;&amp; Source_Account_Lead_Billing_Street__c  &amp;&quot; &quot;&amp; &quot;CITY&quot;&amp;&quot;:&quot;&amp;  Source_Account_Lead_City__c  &amp;&quot; &quot;&amp; &quot;STATE&quot;&amp;&quot;:&quot;&amp;  Source_Account_Lead_Billing_State__c  &amp;&quot; &quot;&amp; &quot;ZIP&quot;&amp;&quot;:&quot;&amp;  Source_Account_Lead_Billing_Zip__c</formula>
        <inlineHelpText>formula field that concatenates the billing info mapped into the account from the lead</inlineHelpText>
        <label>Source Account Lead Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unverified_Prospect_Web_Address__c</fullName>
        <formula>&quot;STREET&quot;&amp;&quot;:&quot;&amp;  Source_Account__r.Web_Address_Street__c   &amp;&quot; &quot;&amp; &quot;CITY&quot;&amp;&quot;:&quot;&amp;   Source_Account__r.Web_Address_City__c   &amp;&quot; &quot;&amp; &quot;STATE&quot;&amp;&quot;:&quot;&amp; Source_Account__r.Web_Address_State__c &amp;&quot; &quot;&amp; &quot;ZIP&quot;&amp;&quot;:&quot;&amp;   Source_Account__r.Web_Address_zipcode__c</formula>
        <inlineHelpText>formula field that reads the website address information and concatenates into 1 string for the email template</inlineHelpText>
        <label>Source Account Web Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgetn_Request__c</fullName>
        <inlineHelpText>Yes if you need priority handling of this request</inlineHelpText>
        <label>Urgent Request</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_Car_Lot_Size__c</fullName>
        <inlineHelpText>select the value that applies to the Dealer</inlineHelpText>
        <label>Lot Size-Used</label>
        <picklist>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_City__c</fullName>
        <label>Web Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Phone__c</fullName>
        <label>Web Address Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Web_Address_Same_as_Physical__c</fullName>
        <inlineHelpText>if you answer Yes, the system will automatically populate the physical location information to the web Address info</inlineHelpText>
        <label>Web Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_State__c</fullName>
        <label>Web Address State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Address_Street__c</fullName>
        <label>Web Address Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Address_Zipcode__c</fullName>
        <label>Web Address Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <inlineHelpText>Enter the url of the new account&apos;s website address</inlineHelpText>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Bill_To_IDs__c</fullName>
        <inlineHelpText>enter the 3rd party bill to svoc ids, seperated by commas</inlineHelpText>
        <label>3rd Party Bill-To IDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <inlineHelpText>enter the 6 digit zip code where the customer is located</inlineHelpText>
        <label>Address Zip Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>SVOC Request</label>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>SVOC_Request_Name__c</columns>
        <columns>Source_Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>New_Customer_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>Request_Complete_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Completed,Completed - Approved,Completed - Rejected</value>
        </filters>
        <label>All Completed</label>
        <sharedTo>
            <group>CDG_Managers</group>
            <group>COE_Admins</group>
            <group>COE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>SVOC_Request_Name__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>Source_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Completed - Approved,Completed - Rejected</value>
        </filters>
        <label>All Open</label>
        <sharedTo>
            <group>CDG_Managers</group>
            <group>COE_Admins</group>
            <group>COE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Not_in_CDG_Queue</fullName>
        <columns>SVOC_Request_Name__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>Source_Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Completed - Approved,Completed - Rejected</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>CDG Customer Create</value>
        </filters>
        <label>All Open - Not in CDG Queue</label>
        <sharedTo>
            <group>CDG_Managers</group>
            <group>COE_Admins</group>
            <group>COE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SVOC_Requests</fullName>
        <columns>NAME</columns>
        <columns>Source_Account__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>New_Customer_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Request_Submitted_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All SVOC Requests</label>
        <sharedTo>
            <group>COE_Admins</group>
            <group>COE_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CDG</fullName>
        <columns>SVOC_Request_Name__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>Source_Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Completed - Approved,Completed - Rejected</value>
        </filters>
        <label>CDG</label>
        <queue>CDG_Customer_Create</queue>
    </listViews>
    <listViews>
        <fullName>My_SVOC_Requests</fullName>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Urgetn_Request__c</columns>
        <columns>Source_Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Completed - Approved,Completed - Rejected</value>
        </filters>
        <label>My SVOC Requests</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SVOC Requests</pluralLabel>
    <recordTypes>
        <fullName>Create</fullName>
        <active>true</active>
        <description>used to create a new dealer request</description>
        <label>Create</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Completed</fullName>
        <active>true</active>
        <description>svoc request has been completed, lock page layouts from future edits</description>
        <label>Request Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Submitted</fullName>
        <active>true</active>
        <description>after a create request is submitted, change the page layout to read only until request processed</description>
        <label>Request Submitted</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Unverified_Prospect_Completed</fullName>
        <active>true</active>
        <description>update the page layout after the request is processed</description>
        <label>Create Unverified Prospect Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_Unverified_Prospect_Request</fullName>
        <active>true</active>
        <description>used for the creation of an SVOC request from the Account</description>
        <label>Create Unverified Prospect Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintain</fullName>
        <active>true</active>
        <description>used to change information on an existing account</description>
        <label>Maintain</label>
    </recordTypes>
    <recordTypes>
        <fullName>unverified_create_submitted</fullName>
        <active>true</active>
        <description>locks page layout after an unverified prospect is submitted</description>
        <label>Create Unverified Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Address_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(TEXT( Billing_Address_Same_as_Physical__c) = &quot;No&quot;, ISBLANK(  Billing_Street__c  ),False)</errorConditionFormula>
        <errorMessage>the billing address information is required is you answered No to the question &quot;Is Billing Address same as physical location?&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Group_equals_Yes</fullName>
        <active>true</active>
        <description>if the new dealer is part of a dealer group, the user must lookup the dealer group account</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_is_part_of_Dealer_Group__c , &quot;Yes&quot;), ISBLANK(  Dealer_Group_Account__r.Name  ))</errorConditionFormula>
        <errorMessage>you must look up the Dealer Group Account if you answered Yes that the new dealer setup you are requesting is part of a dealer group</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Type_equals_Franchise</fullName>
        <active>true</active>
        <description>the new lot size is required if the dealer type = Franchise</description>
        <errorConditionFormula>AND(ISPICKVAL(  Dealer_Type__c , &quot;Franchise&quot;),  (ISPICKVAL(New_Car_Lot_Size__c, &quot;&quot; )))</errorConditionFormula>
        <errorMessage>If the dealer is a Franchise, please select the picklist value that represents the dealers new car lot size</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_Type_equals_Independent</fullName>
        <active>true</active>
        <description>used car lot size required if franchise = Independent</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_Type__c , &quot;Independant&quot;), (ISPICKVAL(Used_Car_Lot_Size__c, &quot;&quot; )))</errorConditionFormula>
        <errorMessage>please select the correct picklist value that represents the dealers used car lot size</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nameplates_required_for_Franchise_Dealer</fullName>
        <active>true</active>
        <description>user must select nameplates if the Dealer Type = Franchise</description>
        <errorConditionFormula>AND(ISPICKVAL( Dealer_Type__c , &quot;Franchise&quot;), (ISNULL( Dealer_Nameplates__c )))</errorConditionFormula>
        <errorMessage>if the dealer type you selected is Franchise, then you must select the nameplates that apply to the dealer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Web_Address_Required</fullName>
        <active>true</active>
        <description>if the user answer NO to the question &quot;web address same as physical location?&quot; and the web street is blank, throw error</description>
        <errorConditionFormula>IF(TEXT(  Web_Address_Same_as_Physical__c ) = &quot;No&quot;, ISBLANK(   Web_Address_Street__c   ),False)</errorConditionFormula>
        <errorMessage>Web Address info is required is you answered &quot;No&quot; to the question &quot;web address same as physical location?&quot;</errorMessage>
    </validationRules>
</CustomObject>